--- a/styles/style.css
+++ b/styles/style.css
@@ -60,3 +60,60 @@ main {
     color: #444343;
 
 }
+.plans {
+    margin-top: 120px;
+}
+.plans-headings {
+    text-align: center;
+    font-size: 40px;
+    font-weight: 700;
+}
+.plans-container {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+}
+.plan {
+    text-align: center;
+}
+.plan h3 {
+    font-size: 30px;
+    font-weight: 700;
+}
+.plan p {
+    font-size: 25px;
+    color: #737272;
+
+}
+footer {
+    padding: 0px 230px;
+    margin-top: 130px;
+    height: 577px;
+    background-color: #151414;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: white;
+}
+footer p {
+    margin: 15px 0;
+    line-height: 26px;
+}
+footer h3 {
+    font-size: 26px;
+    margin-bottom: 30px;
+}
+.input-field {
+    padding: 21px 0px;
+    padding-left: 5px;
+    width: 325px;
+    background-color: transparent;
+    margin-bottom: 40px;
+    border: 1px solid white;
+    border-radius: 5px;
+    color: white;
+}
+#subscribe-btn {
+    background-color: #005FAC;
+    color: white;
+}
