--- a/styles/style.css
+++ b/styles/style.css
@@ -85,6 +85,24 @@ main {
     color: #737272;
 
 }
+.gradient-section {
+    margin: 130px 0;
+    height: 300px;
+    border-radius: 8px; 
+    background-image:  linear-gradient(90deg, #005FAC 0%, rgba(0, 95, 172, 0) 100%), url("../images/watch.png");
+   
+}
+.gradient {
+    width: 450px;
+    padding-top: 70px;
+    padding-left: 70px;
+}
+.gradient h2 {
+    margin-bottom: 25px;
+    color: white;
+    font-size: 40px;
+    font-weight: 700;
+}
 footer {
     padding: 0px 230px;
     margin-top: 130px;
@@ -102,6 +120,13 @@ footer p {
 footer h3 {
     font-size: 26px;
     margin-bottom: 30px;
+}
+.social-icon-container {
+    display: flex;
+}
+.icon {
+    margin-top: 10px;
+    margin-right: 25px;
 }
 .input-field {
     padding: 21px 0px;
