--- a/styles/style.css
+++ b/styles/style.css
@@ -66,7 +66,32 @@ main {
 }
 .half-width p ol{
     color: #444343;
+}
+.blog-area {
+    margin-top: 120px;
+}
+.blog-title {
+    font-size: 40px;
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.blogs {
+    display: flex;
+    justify-content: space-between;
 
+}
+.blog {
+    width: 30%;
+}
+.blog img {
+    width: 100%;
+}
+.blog h3 {
+    margin: 30px 0px;
+}
+.blog p {
+    color: #444343;
 }
 .plans {
     margin-top: 120px;
