--- a/styles/style.css
+++ b/styles/style.css
@@ -15,9 +15,13 @@ header {
 }
 .banner-text {
     width: 525px;
-    margin-right: 230px;
+    margin-right: 200px;
     color: white;
    text-align: end;
+}
+.p-styles {
+    margin: 24px 0px;
+    line-height: 26px;
 }
 .heading {
     font-size: 65px;
@@ -37,7 +41,7 @@ main {
 }
 .failure-section {
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     justify-content: space-between;
     margin-top: 130px;
 }
@@ -53,6 +57,9 @@ main {
 }
 .failure-details ul {
     list-style: none;
+}
+.failure-list {
+    margin: 8px 0px;
 }
 .fa {
     color: #16D887;
